feat: Create card templates on button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button id="addButton">Add</button>
+    <button id="removeAllButton">Remove All</button>
+    <article>
+        <template id="cardTemplate">
+            <div class="card">
+                <p class="title"></p>
+                <p class="author"></p>
+                <p class="pages"></p>
+                <p class="read"></p>
+            </div>
+        </template>
+    </article>
 </body>
 </html>
