feat: Add read checkbox

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 <p class="title"></p>
                 <p class="author"></p>
                 <p class="pages"></p>
-                <p class="read"></p>
+                <button id="removeButton">Remove</button>
+                <button id="updateButton">Update</button>
+                <input type="checkbox" id="readToggle">
             </div>
         </template>
     </article>
