feat: Create modal design

--- a/index.html
+++ b/index.html
@@ -31,5 +31,20 @@
             </div>
         </template>
     </article>
+    <dialog id="newBookModal">
+        <div class="newBookWrapper">
+            <div class="titleWrapper">
+                <h1>New Book</h1>
+                <input type="image" src="assets/images/cross.svg" alt="Cross">
+            </div>
+            <input type="text" placeholder="Title">
+            <input type="text" placeholder="Author">
+            <div class="checkboxWrapper">
+                <input type="checkbox" id="readCheckbox">
+                <label for="readCheckbox">Have you read it?</label>
+            </div>
+            <button type="button">Add</button>
+        </div>
+    </dialog>
 </body>
 </html>
